--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <section class="about-me">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a Software Development Engineer with experience in developing scalable software solutions. I have worked at companies like Intel and Amazon, where I contributed to various projects and gained hands-on experience in full-stack development.</p>
+            <p>I am a Software Development Engineer with experience in developing scalable software solutions. I am currently working in INTEL, worked at companies like Intel and Amazon, where I contributed to various projects and gained hands-on experience in full-stack development.</p>
         </div>
     </section>
 
